--- a/layouts/style.css
+++ b/layouts/style.css
@@ -198,30 +198,60 @@ a {
   height: 0;
   padding-bottom: 50%;
   max-width: 20%;
+  position: relative;
+}
+
+.d-header__text {
+  position: absolute;
+  top: 20%;
+  width: 90%;
+  left: 80%;
+}
+
+@media only screen and (max-width: 1086px) {
+  .d-header__text--h1 {
+    font-size: 24px;
+  }
+}
+
+@media only screen and (max-width: 986px) {
+  .d-header__text--h1 {
+    font-size: 20px;
+  }
+}
+
+.d-header__text--h1 {
+  color: #3f3f3f;
+}
+
+.d-header__text--p {
+  padding-top: 20px;
+  font-size: 13px;
+  color: #696969;
 }
 
 .d-header__background--right {
   z-index: -23;
-  max-width: 100%;
+  max-width: 80%;
   min-width: 80%;
   flex: 5;
-  min-height: 100%;
-  max-height: 100%;
+  position: relative;
 }
 
 .d-header__hero {
   position: absolute;
-  left: 23%;
-  top: 15%;
+  left: 7%;
+  top: 10%;
 }
 
 .d-header__hero--img {
-  max-width: 78%;
+  max-width: 80%;
 }
 
 .d-numbers__container {
   position: relative;
 }
+
 .d-header__numbers {
   position: absolute;
   cursor: pointer;
@@ -231,48 +261,32 @@ a {
 }
 
 .number__svg:hover > #cls-circle {
-  fill: #fff200;
+  fill: #fff200 !important;
 }
 .d-header__numbers--1 {
-  top: 57%;
-  left: 20%;
+  top: 42%;
+  left: 3%;
 }
 
 .d-header__numbers--2 {
-  top: 90%;
-  left: 40%;
+  top: 67%;
+  left: 28%;
 }
 .d-header__numbers--3 {
-  top: 76%;
-  left: 70%;
+  top: 55%;
+  left: 65%;
 }
 .d-header__numbers--4 {
-  top: 49%;
-  left: 44%;
+  top: 36%;
+  left: 33%;
 }
 .d-header__numbers--5 {
-  top: 25%;
-  left: 66%;
+  top: 19%;
+  left: 62%;
 }
 
 .d-header__numbers--text {
   position: relative;
-}
-
-.d-header__text {
-  position: absolute;
-  top: 20%;
-  max-width: 20%;
-  left: 17%;
-}
-.d-header__text--h1 {
-  color: #3f3f3f;
-}
-
-.d-header__text--p {
-  padding-top: 20px;
-  font-size: 13px;
-  color: #696969;
 }
 
 /* =============================Tooltip=========================== */
@@ -482,13 +496,14 @@ span.d-header__tooltip--text5::after {
 }
 
 .d-slider__slide--h2 {
-  color: #f66269;
   margin-bottom: 30px;
 }
-
-.d-slider__slide--h2 span {
-  border-bottom: 1px dotted #f66269;
+.d-slider__slide--h2 > a {
+  color: #f66269;
+  margin-bottom: 30px;
+  text-decoration: none;
 }
+
 .d-slider__slide--p {
   color: #696969;
   font-size: 13px;
@@ -532,20 +547,18 @@ span.d-header__tooltip--text5::after {
   position: absolute;
   bottom: 0;
   width: 100%;
+  max-height: 80%;
 }
 
 .d-footer__content--textarea {
   color: #fff;
   display: -ms-flex;
   display: -webkit-flex;
-  display: flex;
+  display: row;
   justify-content: center;
   flex-wrap: wrap;
   margin: 0 10%;
   max-height: 50%;
-}
-.d-footer__content--textarea > div:last-child {
-  flex: 0 1 100%;
 }
 
 .d-footer__text,
@@ -640,6 +653,18 @@ span.d-header__tooltip--text5::after {
   transition: all 0.2s ease-in-out;
 }
 
+@media only screen and (max-width: 986px) {
+  .d-footer__svg--img {
+    max-width: 50%;
+  }
+}
+
+@media only screen and (max-width: 1086px) {
+  .d-footer__svg--img {
+    max-width: 60%;
+  }
+}
+
 .d-footer__svg--img:hover {
   transform: scale(1.1);
 }
@@ -657,12 +682,27 @@ span.d-header__tooltip--text5::after {
 
 .d-about__hero {
   position: absolute;
-  left: 40%;
-  top: 8%;
+  left: 35%;
+  top: 10%;
 }
 
 .d-about__hero--img {
   max-width: 75%;
+}
+
+@media only screen and (max-width: 1160px) {
+  .d-about__hero--img {
+    max-width: 50%;
+  }
+}
+
+@media only screen and (max-width: 906px) {
+  .d-about__hero {
+    top: 15%;
+  }
+  .d-about__hero--img {
+    max-width: 35%;
+  }
 }
 
 .d-about {
@@ -721,13 +761,6 @@ span.d-header__tooltip--text5::after {
 .d-team {
   padding: 80px 40px;
   background-color: #fff;
-  display: -ms-flex;
-  display: -webkit-flex;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
 }
 
 .d-team__text--h1 {
@@ -746,9 +779,13 @@ span.d-header__tooltip--text5::after {
 }
 
 .d-team__member {
-  margin: 0 30px;
   max-width: 215px;
+  display: inline-block;
+  margin: 10px 0 0 2%;
+  flex-grow: 1;
+  width: calc(100% * (1 / 4) - 10px - 1px);
 }
+
 .d-team__member--img {
   width: 100%;
 }
@@ -1209,38 +1246,7 @@ span.d-header__tooltip--text5::after {
   display: none;
 }
 
-@media only screen and (min-width: 1025px) and (max-width: 1240px) {
-  .d-header__text {
-    position: absolute;
-    top: 22%;
-    max-width: 18%;
-    left: 15%;
-  }
-
-  .d-header__hero--img {
-    max-width: 70%;
-  }
-
-  .d-header__numbers--1 {
-    top: 50%;
-  }
-  .d-header__numbers--2 {
-    top: 77%;
-    left: 38%;
-  }
-  .d-header__numbers--3 {
-    top: 63%;
-    left: 65%;
-  }
-  .d-header__numbers--4 {
-    top: 43%;
-    left: 41%;
-  }
-  .d-header__numbers--5 {
-    top: 23%;
-    left: 62%;
-  }
-
+/* @media only screen and (min-width: 1025px) and (max-width: 1240px) {
   .d-footer__text,
   .d-footer__social,
   .d-footer__contact {
@@ -1259,4 +1265,4 @@ span.d-header__tooltip--text5::after {
   .d-footer__contact {
     margin-top: 50px;
   }
-}
+} */
